--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -74,3 +74,10 @@ h2 {
 h3 {
     font-size: small;
 }
+
+.comp-container {
+    background-color: white;
+    margin-top: 50px;
+    padding-left: 50px;
+    padding-top: 15px;
+}
